fixed product card info spacing

--- a/force-app/main/default/lwc/productCard/productCard.css
+++ b/force-app/main/default/lwc/productCard/productCard.css
@@ -6,8 +6,6 @@
 
 .padded {
     padding-left: 1em;
-    padding-top: 0.5em;
-    padding-bottom: 0.25em;
 }
 
 .bordered {
